--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 </head>
 <body>
     <h1 id="hh">Hello gittu basi</h1>
-    <p>How are you bitch</p>\
+    <p>How are you bitch</p>
     <div class="jack">
-        <h3>hello fuckers
-
-        </h3>
+        <h3>Lorem is so Good Text resource</h3>
         <p class="jack">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt aspernatur facere et quia, quis, doloribus exercitationem laboriosam laborum corrupti possimus dolorum sed soluta, minima dignissimos quos magni natus? Impedit, modi beatae autem architecto unde doloremque in animi! Porro est, atque voluptatibus velit tempore itaque hic iure et similique cupiditate ipsam!</p>
     </div>
 </body>
