--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Today last gittu
+    <title>Gittu bashi
+
 
     </title>
     <link rel="stylesheet" href="style.css">
@@ -14,7 +15,7 @@
     <p>How are you bitch</p>
     <div class="jack">
         <h3>Lorem is so Good Text resource</h3>
-        <p class="jack">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt aspernatur facere et quia, quis, doloribus exercitationem laboriosam laborum corrupti possimus dolorum sed soluta, minima dignissimos quos magni natus? Impedit, modi beatae autem architecto unde doloremque in animi! Porro est, atque voluptatibus velit tempore itaque hic iure et similique cupiditate ipsam!</p>
+        <p class="jack">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt aspernatur facere et quia, quis, doloribus exercitationem laboriosam laborum corrupti possimus dolorum sed soluta, minima dignissimos quos magni natus? <strong>Impedit</strong>, modi beatae autem architecto unde doloremque in animi! Porro est, atque voluptatibus velit tempore itaque hic iure et similique cupiditate ipsam!</p>
     </div>
 </body>
 </html>
