--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="hh">Hello gittu basi</h1>
+    <h1 id="hh"><u>Hello gittu basi</u></h1>
     <p>How are you bitch</p>
     <div class="jack">
         <h3>Lorem is so Good Text resource</h3>
         <p class="jack">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt aspernatur facere et quia, quis, doloribus exercitationem laboriosam laborum corrupti possimus dolorum sed soluta, minima dignissimos quos magni natus? <strong>Impedit</strong>, modi beatae autem architecto unde doloremque in animi! Porro est, atque voluptatibus velit tempore itaque hic iure et similique cupiditate ipsam!</p>
+        <img src="anik.jpg" alt="">
     </div>
 </body>
 </html>
