--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
         <p class="jack">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt aspernatur facere et quia, quis, doloribus exercitationem laboriosam laborum corrupti possimus dolorum sed soluta, minima dignissimos quos magni natus? <strong>Impedit</strong>, modi beatae autem architecto unde doloremque in animi! Porro est, atque voluptatibus velit tempore itaque hic iure et similique cupiditate ipsam!</p>
         <img src="anik.jpg" alt="">
     </div>
+
+    <img src="pink.jpg" alt="">
 </body>
 </html>
